[package]
name = "B-OS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]

#[profile.dev]
#panic = "abort"
#
#[profile.release]
#panic = "abort"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies]
volatile = "0.2.6"
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
spin = { version = "0.9.8", features = [] }
x86_64 = "0.14.11"
uart_16550 = "0.3.0"
pic8259 = "0.10.4"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.1"
raw-cpuid = "11.0.1"
